--- a/.github/workflows/stable-cicd.yaml
+++ b/.github/workflows/stable-cicd.yaml
@@ -73,6 +73,10 @@ jobs:
                 with:
                     assembly: stable
                     packages: openjdk17-jdk
+                    maven-build-phases: install
+                    maven-doc-phases: clean,site,site:stage
+                    maven-stable-artifact-phases: clean,site,site:stage,deploy
+                    documentation-dir: target/staging/validate
                 env:
                     central_portal_username: ${{secrets.CENTRAL_REPOSITORY_USERNAME}}
                     central_portal_token: ${{secrets.CENTRAL_REPOSITORY_TOKEN}}
